<resources>
    <string name="app_name">Weather app</string>
    <string name="moscow">Moscow</string>
    <string name="sunny">Sunny</string>
    <string name="windless">Windless</string>
    <string name="st_petersburg">St. Petersburg</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="krasnodar">Krasnodar</string>
    <string name="button">Сity selection</string>
    <string name="city_selection">Сhoose a city</string>
    <string name="button1">Go!</string>
    <string name="precipitation">Precipitation</string>
    <string name="pressure">Pressure,mmHg</string>
    <string name="choose_parameter">Choose parameter</string>
    <string name="wind">Wind, m/s</string>
    <string name="temperature">Temperature</string>
    <string name="go">Go!</string>
    <string name="enter_city">Enter city</string>
    <string name="_10days">Прогноз погоды на 10 дней</string>
    <string name="settings">Settings</string>
    <string name="information">About</string>
    <string name="text_about_app">Погодное приложение\n
        Автор homerproger</string>
    <string name="change_theme">Change theme</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favorites">Favorites cities</string>
    <string name="additionally">Additionally</string>
    <string name="info_nav">Information</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="humidity">Humidity,%</string>
    <string name="temp">Temperature,°C </string>
    <string name="temp_mark">°C </string>
    <string name="humidity_mark">%</string>
    <string name="wind_mark">m/s</string>
    <string name="pressure_mark">mmHg</string>
    <string name="request_history">Request history</string>
    <string name="attention">Attention!</string>
    <string name="empty_request">Empty request</string>
    <string name="not_found_city">City is not found</string>
    <string name="not_connection">No connection</string>


    <string-array name="cities">
        <item>Moscow</item>
        <item>St.Petersburg</item>
        <item>Novosibirsk</item>
        <item>Nizhny Novgorod</item>
        <item>Ekaterinburg</item>
        <item>Samara</item>
        <item>Omsk</item>
        <item>Kazanк</item>
        <item>Ufa</item>
        <item>Chelyabinsk</item>
        <item>Rostov-on-Don</item>
        <item>Perm</item>
    </string-array>

    <string-array name="dates">
        <item>20.11.2020</item>
        <item>21.11.2020</item>
        <item>22.11.2020</item>
        <item>23.11.2020</item>
        <item>24.11.2020</item>
        <item>25.11.2020</item>
        <item>26.11.2020</item>
        <item>27.11.2020</item>
        <item>28.11.2020</item>
        <item>29.11.2020</item>
        <item>30.11.2020</item>
    </string-array>

    <string-array name="days">
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="temperature">
        <item>+1°C</item>
        <item>0°C</item>
        <item>-1°C</item>
        <item>+1°C</item>
        <item>+1°C</item>
        <item>0°C</item>
        <item>+3°C</item>
        <item>-3°C</item>
        <item>-4°C</item>
        <item>-1°C</item>
        <item>+2°C</item>
    </string-array>
    <string-array name="precipitation">
        <item>Snow</item>
        <item>Snow</item>
        <item>Light snow</item>
        <item>Light wet snow</item>
        <item>Light snow with rain</item>
        <item>Snow with rain</item>
        <item>Light snow with rain</item>
        <item>Snow</item>
        <item>Light snow</item>
        <item>Without precipitation</item>
        <item>Without precipitation</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>